comecei a escrever o conteúdo

--- a/index.html
+++ b/index.html
@@ -9,15 +9,15 @@
 <body>
     <main>
         <header>
-            <h1>título do site</h1>
+            <h1>Cursos Grátis</h1>
         </header>
         <article>
-            <h2>Artigo 001</h2>
-            <p>Texto artigo 001</p>
+            <h2>Curso de HTML5 e CSS3</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolores quis exercitationem accusantium enim, aliquam, illum eum ullam nemo officiis optio aliquid? Cum aspernatur officia ipsa dicta, dolores dignissimos nihil accusamus.</p>
         </article>
         <article>
-            <h2>Artigo 002</h2>
-            <p>Texto artigo 002</p>
+            <h2>Curso de JavaScript</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia dicta voluptatum iste vitae ipsum sed, officiis autem, tempora ipsa, amet sint facilis nesciunt iusto inventore explicabo eveniet aliquid adipisci perferendis.</p>
         </article>
     </main>
 </body>
